tests/snapshots/scripts_sanitized/Admin API Tool/External Authentication - ID 133/Get Microsoft Identity Provider Information - ID 141.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get Microsoft Identity Provider Information
#  HISTORY:
				   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  2019-04-23 by Mike Duncan, update to v2 admin api

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/extauth/provider/microsoft" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::AzureID ; JSONGetElement ( $$my.result ; "response.AzureID" ) ]
	Feldwert setzen [ FMS__fmserver::AzureKey ; JSONGetElement ( $$my.result ; "response.AzureKey" ) ]
	Feldwert setzen [ FMS__fmserver::AzureDirectoryID ; JSONGetElement ( $$my.result ; "response.AzureDirectoryID" ) ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
